api is now fully usable
